@@ -59,7 +59,8 @@
 
 <p>Les cellules élémentaires des <strong>systèmes cubiques</strong> peuvent être créées avec une certaine <strong>orientation cristallographique</strong>, si le mot-clé "<code>orient</code>" apparaît après les espèces chimiques et est suivi des indices de Miller <em>hkl</em> des directions à aligner avec les axes cartésiens X, Y et Z (voir <a href="./options.html">comment spécifier les indices de Miller</a>). Notez que le mot-clé "<code>orient</code>" doit impérativement apparaître juste après les symboles des espèces chimiques, et ne doit pas être confondu avec l'<a href="./option_orient.html">option <code>-orient</code></a>.</p>
 
-<p>Les cellules élémentaires des <strong>mailles hexagonales</strong> peuvent aussi être orientées, mais la signification est différente des mailles cubiques. Tout d'abord, pour les systèmes hexagonaux, les vecteurs de Miller doivent contenir quatre entiers [<em>hkil</em>], qui satisfont <em>h</em>+<em>k</em>+<em>i</em>=0. Trois vecteurs doivent être fournis après le mot-clé "orient". Ces trois vecteurs deviendront les trois vecteurs de boîte. Ils ne doivent pas forcément être orthogonaux (contrairement aux systèmes cubiques), en revanche ils doivent être linéairement indépendants. À la fin, Atomsk alignera le premier vecteur avec l'axe cartésien X, le second vecteur sera contenu dans le plan XY, et le troisième vecteur de boîte pointera en-dehors du plan XY. Ainsi, contrairement aux systèmes cubiques, les trois directions cristallographiques fournies ne seront pas toutes alignées avec les axes cartésiens (à l'exception du premier vecteur), et la boîte finale ne sera pas orthogonale. Pour obtenir une boîte orthogonale, vous pouvez utiliser l'<a href="./option_orthocell.html">option <code>-orthogonal-cell</code></a> après avoir créé le système orienté.</p>
+<p>Les cellules élémentaires des <strong>mailles hexagonales</strong> peuvent aussi être orientées, mais la signification est différente des mailles cubiques. Tout d'abord, pour les systèmes hexagonaux, les vecteurs de Miller doivent contenir quatre entiers [<em>hkil</em>], qui satisfont <em>h</em>+<em>k</em>+<em>i</em>=0. Trois vecteurs doivent être fournis après le mot-clé "orient". Ces trois vecteurs deviendront les trois vecteurs de boîte. Ils ne doivent pas forcément être orthogonaux (contrairement aux systèmes cubiques), en revanche ils doivent être linéairement indépendants. À la fin, Atomsk alignera le premier vecteur avec l'axe cartésien X, le second vecteur sera contenu dans le plan XY, et le troisième vecteur de boîte pointera en-dehors du plan XY. Ainsi, contrairement aux systèmes cubiques, les trois directions cristallographiques fournies ne seront pas toutes alignées avec les axes cartésiens (à l'exception du premier vecteur), et la boîte finale ne sera pas orthogonale. Pour obtenir une boîte 
+orthogonale, vous pouvez utiliser l'<a href="./option_orthocell.html">option <code>-orthogonal-cell</code></a> après avoir créé le système orienté.</p>
 
 <p>Pour <strong>créer un nanotube</strong> il faut spécifier un seul paramètre de maille (correspondant à la distance entre premiers voisins) ainsi que les indices chiraux <em>m</em> et <em>n</em> qui doivent être des entiers. Le motif élémentaire d'un nanotube n'est défini de manière non-ambigue que suivant l'axe du tube, qui sera l'axe Z ici. Dans les autres directions, Atomsk définira les vecteurs de boîte de sorte que les répliques périodiques du nanotube forment un motif hexagonal, tel que cela est observé expérimentalement. La distance entre les répliques peut être changée en changeant manuellement ces composantes des vecteurs de boîte. Notez que le centre du nanotube créé se trouvera à l'origine (0,0), de sorte qu'il est facile de créer des nanotubes multi-parois en créant plusieurs nanotubes de diamètres différents puis en les <a href="mode_merge.html">regroupant</a>.</p>
 
@@ -100,6 +101,15 @@
 
 <li><code class="command">atomsk --create per 3.86 Sr Ti O orient 001 110 1-10 -duplicate 30 20 1 sto.xsf</code>
 <p>Cet exemple utilise l'<a href="./option_duplicate.html">option <code>-duplicate</code></a>. Une cellule élémentaire de titanate de strontium orientée X=[001], Y=[110], Z=[1<span class="over">1</span>0] sera créée, puis étendue pour former une supercellule de dimensions 30x20x1. Le résultat final sera écrit dans le fichier <code>sto.xsf</code>.</p></li>
+
+<li><code class="command">atomsk --create hcp 3.21 5.213 Mg cfg</code>
+<p>Cet exemple va créer une cellule hexagonale de magnésium à maille hexagonale compacte, avec a=3.21&nbsp;&Aring; et c=5.213&nbsp;&Aring;. Le résultat final sera écrit dans le fichier <code>Mg.cfg</code>.</p></li>
+
+<li><code class="command">atomsk --create hcp 3.21 5.213 Mg orient [0001] [2-310] [-1-230] cfg</code>
+<p>Cet exemple va créer une cellule élémentaire de magnésium hcp avec l'orientation cristallographique spécifiée. Le premier vecteur de boîte sera [0001] et sera aligné avec l'axe cartésien X ; le second vecteur de boîte sera [2-310] et appartiendra au plan XY ; le troisième vecteur de boîte sera [-1-230] et pointera en dehors du plan XY. Notez que les trois vecteurs de boîte finaux ne sont pas orthogonaux.</p></li>
+
+<li><code class="command">atomsk --create hcp 3.21 5.213 Mg orient [0001] [2-310] [-1-230] -orthogonal-cell cfg</code>
+<p>Identique à l'exemple précédent, sauf que l'<a href="./option_orthocell.html">option <code>-orthogonal-cell</code></a> va générer une boîte orthogonale équivalente, en utilisant des combinaisons linéaires des vecteurs de boîte initiaux. Ici, les vecteurs de boîte finaux seront des combinaisons linéaires des vecteurs de réseau [0001], [2-310], et [-1-230].</p></li>
 
 <li><code class="command">atomsk --create graphite 2.5 3.6 B N bn.xsf</code>
 <p>Cet exemple créera une cellule élémentaire de nitrure de bore hexagonal (qui a la même maille que le graphite), ayant pour paramètres de maille a=2.5&nbsp;&Aring; et c=3.6&nbsp;&Aring;. Le résultat final sera écrit dans le fichier <code>bn.xsf</code>.</p></li>
