@@ -11,7 +11,7 @@ MODULE mode_polycrystal
 !*     Université de Lille, Sciences et Technologies                              *
 !*     UMR CNRS 8207, UMET - C6, F-59655 Villeneuve D'Ascq, France                *
 !*     pierre.hirel@univ-lille1.fr                                                *
-!* Last modification: P. Hirel - 12 March 2018                                    *
+!* Last modification: P. Hirel - 26 March 2018                                    *
 !**********************************************************************************
 !* OUTLINE:                                                                       *
 !* 100        Read atom positions of seed (usually a unit cell) from ucfile       *
@@ -57,7 +57,7 @@ IMPLICIT NONE
 CHARACTER(LEN=*),INTENT(IN):: ucfile  !name of file containing seed (usually a unit cell, but can be anything)
 CHARACTER(LEN=*),INTENT(IN):: vfile   !name of file containing parameters for Voronoi construction
 CHARACTER(LEN=*),INTENT(IN):: prefix  !name or prefix for output file (polycrystal)
-CHARACTER(LEN=5),DIMENSION(:),ALLOCATABLE,INTENT(IN):: outfileformats !list of formats to output
+CHARACTER(LEN=5),DIMENSION(:),ALLOCATABLE:: outfileformats !list of formats to output
 CHARACTER(LEN=128),DIMENSION(:),ALLOCATABLE:: options_array !options and their parameters
 !
 CHARACTER(LEN=2):: species
@@ -66,6 +66,7 @@ CHARACTER(LEN=128):: line
 CHARACTER(LEN=128):: or1, or2, or3
 CHARACTER(LEN=128):: lattice  !if grains are organized according to a lattice
 CHARACTER(LEN=128):: msg, temp
+CHARACTER(LEN=128):: outparamfile  !file where grain parameters are written (if some parameters equal "random")
 CHARACTER(LEN=128),DIMENSION(:),ALLOCATABLE:: AUXNAMES    !names of auxiliary properties of atoms
 CHARACTER(LEN=128),DIMENSION(:),ALLOCATABLE:: newAUXNAMES !names of auxiliary properties of atoms (temporary)
 CHARACTER(LEN=128),DIMENSION(:),ALLOCATABLE:: comment
@@ -74,6 +75,7 @@ LOGICAL:: Hset            !are the box vectors H(:,:) defined?
 LOGICAL:: isinpolyhedron  !is atom inside the polyhedron?
 LOGICAL:: miller          !are Miller indices given? (if no then angles are given)
 LOGICAL:: paramnode, paramrand, paramlatt !are the keywords "node", "random", "lattice" used in parameter file?
+LOGICAL:: outparam        !were parameters saved in a text file?
 LOGICAL,DIMENSION(:),ALLOCATABLE:: SELECT
 INTEGER:: twodim        !=0 if system is 3-D, =1,2,3 if system is thin along x, y, z
 INTEGER:: grainID       !position of the auxiliary property "grainID" in AUX
@@ -123,6 +125,11 @@ REAL(dp),DIMENSION(:,:,:),ALLOCATABLE:: vorient !crystallographic orientation of
 !
 !Initialize variables
 CALL NAME_OUTFILE(prefix,distfile,"dat  ")
+CALL NAME_OUTFILE(prefix,temp,"     ")
+i=SCAN(temp,".",BACK=.TRUE.)  !remove trailing dot
+temp = temp(1:i-1)
+outparamfile = TRIM(ADJUSTL(temp))//"_param.txt"
+outparam = .FALSE.
 Nnodes = 0
 twodim = 0  !assume system will be 3-D
 IF(ALLOCATED(SELECT)) DEALLOCATE(SELECT)
@@ -655,10 +662,17 @@ DO
       !The last 3*Nnodes random numbers are used to generate rotation matrices
       !Multiply them by 2*pi and subtract pi to generate 3 angles alpha, beta and gamma
       randarray(3*Nnodes:) = randarray(3*Nnodes:)*2.d0*pi - pi
+      !
+      !Positions and orientations will be written in a parameter file
+      OPEN(41,FILE=outparamfile,STATUS="UNKNOWN")
+      WRITE(41,'(a62)') "# Random positions and rotations of grains generated by Atomsk"
+      WRITE(41,'(a4,3f16.6)') "box ", H(1,1), H(2,2), H(3,3)
+      !
       DO i=1,Nnodes
         P1 = randarray(3*Nnodes+3*(i-1)+1)
         P2 = randarray(3*Nnodes+3*(i-1)+2)
         P3 = randarray(3*Nnodes+3*(i-1)+3)
+        WRITE(41,'(a5,6f16.6)') "node ", vnodes(i,:), RAD2DEG(P1), RAD2DEG(P2), RAD2DEG(P3)
         !
         vorient(i,:,:) = Id_Matrix(:,:) !unity matrix
         IF( twodim==0 .OR. twodim==1 ) THEN
@@ -692,6 +706,11 @@ DO
           vorient(i,:,:) = MATMUL( rotmat(:,:) , vorient(i,:,:) )
         ENDIF
       ENDDO
+      !
+      CLOSE(41)
+      temp = "parameter"
+      CALL ATOMSK_MSG(3002,(/temp,outparamfile/),(/0.d0/))
+      outparam = .TRUE.
       !
       GOTO 250
       !
@@ -804,7 +823,7 @@ CALL ATOMSK_MSG(999,(/TRIM(msg)/),(/0.d0/))
 !
 !If the system is 2-D, do not expand along the shortest axis
 IF( twodim>0 ) THEN
-  expandmatrix(twodim) = 1
+  expandmatrix(twodim) = 0
 ENDIF
 !Evaluate how many particles the template will contain
 m = PRODUCT(expandmatrix(:))*SIZE(Puc,1)
@@ -826,7 +845,7 @@ ENDIF
 WRITE(msg,'(a32,3i6)') "Creating template grain, expand:", expandmatrix(:)
 CALL ATOMSK_MSG(999,(/TRIM(msg)/),(/0.d0/))
 !
-ALLOCATE( Pt( PRODUCT(expandmatrix(:))*SIZE(Puc,1) , 4 ) )
+ALLOCATE( Pt( PRODUCT(expandmatrix(:)+1)*SIZE(Puc,1) , 4 ) )
 Pt(:,:) = 0.d0
 IF( doshells ) THEN
   ALLOCATE( St( SIZE(Pt,1) , 4 ) )
@@ -841,9 +860,9 @@ AUX_Q(:,:) = 0.d0
 WRITE(msg,'(a47,3i3)') "Creating template grain, expand:", expandmatrix(:)
 CALL ATOMSK_MSG(999,(/TRIM(msg)/),(/0.d0/))
 qi=0
-DO o = 1 , expandmatrix(3)
-  DO n = 1 , expandmatrix(2)
-    DO m = 1 , expandmatrix(1)
+DO o = 0 , expandmatrix(3)
+  DO n = 0 , expandmatrix(2)
+    DO m = 0 , expandmatrix(1)
       DO i=1,SIZE(Puc,1)
         qi=qi+1
         !Compute (cartesian) position of the replica of this atom
@@ -1085,7 +1104,7 @@ DO inode=1,Nnodes
     msg = 'atomsk_grain'//TRIM(ADJUSTL(temp))//'.xyz'
     OPEN(UNIT=36,FILE=msg,STATUS="UNKNOWN",FORM="FORMATTED")
     WRITE(36,*) MIN(SIZE(Q,1),qi)
-    msg = '#Debug file for atomsk, mode --voronoi, grain # '//TRIM(ADJUSTL(temp))
+    msg = '#Debug file for atomsk, mode --polycrystal, grain # '//TRIM(ADJUSTL(temp))
     WRITE(36,*) TRIM(msg)
     DO i=1,MIN(SIZE(Q,1),qi)
       CALL ATOMSPECIES(Q(i,4),species)
@@ -1195,10 +1214,57 @@ CALL OPTIONS_AFF(options_array,Huc,H,P,S,AUXNAMES,AUX,ORIENT,SELECT)
 !Write final system to file(s)
 CALL WRITE_AFF(prefix,outfileformats,H,P,S,comment,AUXNAMES,AUX)
 !
+!
+!
+600 CONTINUE
+!From now on, some arrays are not needed anymore => deallocate them
+IF(ALLOCATED(Q)) DEALLOCATE(Q)
+IF(ALLOCATED(S)) DEALLOCATE(S)
+IF(ALLOCATED(T)) DEALLOCATE(T)
+IF(ALLOCATED(AUX)) DEALLOCATE(AUX)
+IF(ALLOCATED(AUXNAMES)) DEALLOCATE(AUXNAMES)
+IF(ALLOCATED(comment)) DEALLOCATE(comment)
+IF(ALLOCATED(outfileformats)) DEALLOCATE(outfileformats)
+!
+!Write positions of nodes into a file
+ALLOCATE(comment(1))
+ comment(1) = "# Positions of nodes"
+ALLOCATE(outfileformats(1))
+outfileformats(1) = "xsf"
+ALLOCATE(Q(SIZE(vnodes,1),4))
+DO i=1,SIZE(vnodes,1)
+  Q(i,1:3) = vnodes(i,1:3)
+  Q(i,4) = 1.d0  !nodes are given the atomic number of hydrogen
+ENDDO
+CALL NAME_OUTFILE(prefix,temp,"     ")
+i=SCAN(temp,".",BACK=.TRUE.)  !remove trailing dot
+temp = temp(1:i-1)
+outparamfile = TRIM(ADJUSTL(temp))//"_nodes.xsf"
+CALL WRITE_AFF(outparamfile,outfileformats,H,Q,S,comment,AUXNAMES,AUX)
+IF(ALLOCATED(Q)) DEALLOCATE(Q)
+IF(ALLOCATED(comment)) DEALLOCATE(comment)
+IF(ALLOCATED(outfileformats)) DEALLOCATE(outfileformats)
+!
 !Find the max. volume occupied by a grain
 Vmin = HUGE(1.d0)
 Vmax = 0.d0
+m=0
+ALLOCATE(Q(SIZE(NPgrains),4))
 DO i=1,SIZE(NPgrains)
+  !Determine the position of the center of mass of this grain
+  P1 = 0.d0
+  vector(:) = 0.d0 !position of center of mass
+  DO j=1,NPgrains(i)
+    m = m+1
+    CALL ATOMSPECIES(P(m,4),species)
+    CALL ATOMMASS(species,P2)
+    vector(:) = vector(:) + P2*P(m,1:3)
+    P1 = P1 + P2
+  ENDDO
+  vector(:) = vector(:) / P1
+  Q(i,1:3) = vector(:)
+  Q(i,4) = 1.d0  !positions of com are given the atomic number of hydrogen
+  !
   !Estimate volume occupied by the grain
   CALL VOLUME_PARA(Huc,Volume)
   Volume = DBLE(NPgrains(i)) * Volume / DBLE(SIZE(Puc,1))
@@ -1209,6 +1275,21 @@ DO i=1,SIZE(NPgrains)
     Vmin = Volume
   ENDIF
 ENDDO
+!
+!Write positions of center of mass of each grain into a file
+ALLOCATE(comment(1))
+ comment(1) = "# Positions of grains centers of mass"
+ALLOCATE(outfileformats(1))
+outfileformats(1) = "xsf"
+CALL NAME_OUTFILE(prefix,temp,"     ")
+i=SCAN(temp,".",BACK=.TRUE.)  !remove trailing dot
+temp = temp(1:i-1)
+outparamfile = TRIM(ADJUSTL(temp))//"_grains-com.xsf"
+CALL WRITE_AFF(outparamfile,outfileformats,H,Q,S,comment,AUXNAMES,AUX)
+IF(ALLOCATED(Q)) DEALLOCATE(Q)
+IF(ALLOCATED(comment)) DEALLOCATE(comment)
+IF(ALLOCATED(outfileformats)) DEALLOCATE(outfileformats)
+!
 WRITE(msg,*) "Min, max. volume occupied by a grain: ", Vmin, Vmax
 CALL ATOMSK_MSG(999,(/TRIM(msg)/),(/0.d0/))
 IF( Vmax > 0.d0 ) THEN
