@@ -8,6 +8,7 @@ Master (development)
 - added support for reading and writing files in PDFFIT structure file format (*.str or *.stru).
 - new option "-orthogonal-cell" allows to find a suitable equivalent orthorhombic cell for any type of system.
 - in mode "--create", added possibility to orient hexagonal lattices. For cubic lattices, if vectors of provided orientation are not orthogonal, a suggestion is now displayed.
+- in mode "--polycrystal", when using the keyword "random", the positions and grain orientations are written into a text parameter file, that can be used to reproduce the polycrystal later. Also, the positions of nodesfor Voronoi construction, and the positions of the grains centers of mass, are written into two separate XSF files for visualisation.
 - in option "-dislocation", added possibility to construct dislocation loops. Thanks to Emmanuel Clouet, CEA, Gif-sur-Yvette, France, for sharing his code Babel for the construction of dislocation loops.
 - in option "-select", added possibility to provide a file containing any ASCII character when using "-select grid"; blank spaces are replaced by 0, any other character by 1. Also added possibility to select atoms inside a 3-D model defined by an STL file. Also added possibility to select atoms inside or outside a torus.
 - in option "-properties", fixed a bug that would result in an infinite loop if user wrote numbers instead of atom species after the keyword "charge". Thanks to Srinivasan Mahendran, UMET, Lille, France, for pointing out this bug.
